# Photon-Proxy

./: AGENT_RULES.md  package.json  setup-permissions.sh
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/proxy_engine/: linux_tproxy.rs  linux_tun_dummy.rs  mod.rs  system_rules.rs  zero_copy.rs
src-tauri/src/proxy_engine/upstream_relay/: http_proxy.rs  mod.rs  socks5.rs
src/lib/components/: EngineStatus.svelte  LogViewer.svelte  ProxyCore.svelte  UpstreamConfig.svelte
src/lib/styles/: theme.css
src/routes/: +page.svelte
